--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body{
     color: rgb(3, 6, 24);
 }
 li{
-    height: 250px;
+    height: 300px;
     width: 190px;
     border: 1px solid rgb(3, 6, 24);
+    padding-left: 10px;
 }
